# chatgpt-export-explorer

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
api/: Dockerfile  database.py  main.py  models.py  processing.py  pyproject.toml
api/notebooks/: 01. Exploring Export Data.ipynb  02. Datamining Conversation Text.ipynb  03. Clustering and UMAP Scatterplots.ipynb  04. Prototying SQLite Database.ipynb  05. Creating Sample Data.ipynb
api/utils/: data_parsing.py  llm_enrichment.py  logging.py  openai.py  pipelines.py  settings.py
backend/: database.py  main.py  models.py
backend/utils/: clusters.py  data_parsing.py  llm_enrichment.py  openai.py
experiments/: pyproject.toml
experiments/notebooks/: 01. Exploring Export Data.ipynb
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  api.js  api.jsx  hooks.js  main.jsx  store.js  stores.js  theme.jsx
frontend/src/app/: layout.js  page.js
frontend/src/tabs/: ImportTab.jsx  ScatterplotTab.jsx  TopicMapTab.jsx  UploadTab.jsx  WelcomeTab.jsx
frontend/src/tabs/TopicMapTab/: ControlPanel.jsx  InfoPanel.jsx  Scatterplot.jsx  TopicMapTab.jsx  utils.js
