[project]
name = "chat-gpt-explorer-api"
version = "0.1.0"
description = "API for Chat GPT Explorer"
authors = [
    {name = "Trevor Hubbard",email = "trevormhubbard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "openai (>=1.63.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
pickleshare = "^0.7.5"
ipywidgets = "^8.1.5"
commitizen = "^4.2.1"
pre-commit = "^4.1.0"
nbstripout = "^0.8.1"
black = "^25.1.0"

