[project]
name = "chat-gpt-explorer-api"
version = "0.1.0"
description = "API for Chat GPT Explorer"
authors = [
    {name = "Trevor Hubbard",email = "trevormhubbard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "openai (>=1.63.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "numpy (==2.1.3)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
pickleshare = "^0.7.5"
ipywidgets = "^8.1.5"
commitizen = "^4.2.1"
pre-commit = "^4.1.0"
nbstripout = "^0.8.1"
black = "^25.1.0"
plotly = "^6.0.0"

