[project]
name = "chat-gpt-explorer-experiments"
version = "0.1.0"
description = "Experimental code for the export explorer"
authors = [
    {name = "Trevor Hubbard",email = "trevormhubbard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
pickleshare = "^0.7.5"
ipywidgets = "^8.1.5"
commitizen = "^4.2.1"
pre-commit = "^4.1.0"
nbstripout = "^0.8.1"

